2nd pass of olm-izing indi/oid

--- a/observatoire_moutherot/relay_server/etc_systemd_system_relayd.service
+++ b/observatoire_moutherot/relay_server/etc_systemd_system_relayd.service
@@ -4,7 +4,10 @@ Description=Starts up relayd
 [Service]
 Type=oneshot
 ExecStart=/home/fmeyer/observatoire_moutherot/relay_server/relayd start
-ExecStop="/home/fmeyer/observatoire_moutherot/relay_server/relayd stop
+ExecStop=/home/fmeyer/observatoire_moutherot/relay_server/relayd stop
+RemainAfterExit=yes
+User=fmeyer
+Group=fmeyer
 
 [Install]
 WantedBy=multi-user.target
